--- a/public/test.html
+++ b/public/test.html
@@ -1,74 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>首页</title>
-    <script src="/js/jquery1.3.2.js"></script>
+<head>
+    <meta charset="utf-8"/>
+    <title>Marked in the browser</title>
+    <link rel="stylesheet" href="/css/highlight/github.css">
+    <script src="/js/highlight/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+    <script src="/js/marked.js"></script>
 </head>
 <body>
-
-<input type="file" >
-<input type="button" >
-
-</body>
-
+<div id="content"></div>
 <script>
-
-    $(function() {
-        var uploader = Qiniu.uploader({
-            runtimes: 'html5,flash,html4',
-            browse_button: 'pickfiles',
-            container: 'container',
-            drop_element: 'container',
-            max_file_size: '100mb',
-//            flash_swf_url: 'js/plupload/Moxie.swf',
-            dragdrop: true,
-            chunk_size: '4mb',
-            uptoken_url: $('#uptoken_url').val(),
-            domain: $('#domain').val(),
-            auto_start: true,
-            init: {
-                'FilesAdded': function (up, files) {
-                   /* $('table').show();
-                    $('#success').hide();
-                    plupload.each(files, function (file) {
-                        var progress = new FileProgress(file, 'fsUploadProgress');
-                        progress.setStatus("绛夊緟...");
-                    });*/
-                },
-                'BeforeUpload': function (up, file) {
-                    /*var progress = new FileProgress(file, 'fsUploadProgress');
-                    var chunk_size = plupload.parseSize(this.getOption('chunk_size'));
-                    if (up.runtime === 'html5' && chunk_size) {
-                        progress.setChunkProgess(chunk_size);
-                    }*/
-                },
-                'UploadProgress': function (up, file) {
-                    /*var progress = new FileProgress(file, 'fsUploadProgress');
-                    var chunk_size = plupload.parseSize(this.getOption('chunk_size'));
-                    progress.setProgress(file.percent + "%", up.total.bytesPerSec, chunk_size);*/
-
-                },
-                'UploadComplete': function () {
-//                    $('#success').show();
-                },
-                'FileUploaded': function (up, file, info) {
-                    /*var progress = new FileProgress(file, 'fsUploadProgress');
-                    progress.setComplete(up, info);*/
-                },
-                'Error': function (up, err, errTip) {
-                    alert("err")
-                }
-                // ,
-                // 'Key': function(up, file) {
-                //     var key = "";
-                //     // do something with key
-                //     return key
-                // }
-            }
-        });
-    })
-
-
+    marked.setOptions({
+            highlight: function (code,lang) {
+        return hljs.highlightBlock(code);
+    }
+    });
+    document.getElementById('content').innerHTML =
+            marked('```js\n console.log("hello"); \n```');
 </script>
+<br>
+<pre>
+    <code>
+        console.log("hello");
+    </code>
+</pre>
+</body>
 </html>
