文章页面增加了关键和页面描述。美化了页面。

--- a/public/test.html
+++ b/public/test.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8"/>
     <title>Marked in the browser</title>
     <link rel="stylesheet" href="/css/highlight/github.css">
-    <script src="/js/highlight/highlight.pack.js"></script>
+    <script src="/js/external/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-    <script src="/js/marked.js"></script>
+    <script src="/js/external/marked.js"></script>
 </head>
 <body>
 <div id="content"></div>
