在内存中存储session采用lru策略，优化了记录博客访问量和文章访问量的逻辑,静态文件url加上了前缀public

--- a/public/upload.html
+++ b/public/upload.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8"/>
     <title>Marked in the browser</title>
-    <script src="/js/external/jquery1.3.2.js"></script>
-    <script type="text/javascript" src="/js/upload/plupload.full.min.js"></script>
-    <script type="text/javascript" src="/js/upload/zh_CN.js"></script>
+    <script src="/public/js/external/jquery1.3.2.js"></script>
+    <script type="text/javascript" src="/public/js/upload/plupload.full.min.js"></script>
+    <script type="text/javascript" src="/public/js/upload/zh_CN.js"></script>
     <script src="/js/main.js"></script>
 </head>
 <body>
